fixed styling issue to allow menu items to wrap around

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -302,6 +302,7 @@ button.ppl-count-btn {
 
 .menu-items {
     display: flex;
+    flex-wrap: wrap;
     gap: 25px;
     padding: 40px;
 }
